Implementing product pages

--- a/cute-farms-terrarium-starter-kit.html
+++ b/cute-farms-terrarium-starter-kit.html
@@ -57,12 +57,12 @@
 			<li><a href="critters">Critters</a></li>
 		</ul>
 		<article style="height: 100vh;">
-            <div class="content" style>
+            <div class="content">
 				<br/><br/><br/>
 				<img src="images/cute-farms-terrarium-starter-kit.png" alt="Cute Farms Terrarium Starter Kit" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Cute Farms Terrarium Starter Kit | Moss, Vermiculite, Soil, Pebbles, Plant Food, Finishing Tools (Large Kit)</h2>
-					<h2 style="float: left">$22.95</h2>
+					<h2 style="float: left">$24.95</h2>
 					<a href="https://amzn.to/2SQ38kK" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
