--- a/materials.html
+++ b/materials.html
@@ -61,20 +61,20 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2vUiA6l" target="_blank">
-								<img src="images/cute-farms-terrarium-starter-kit.png" alt="cute" class="product-img">
+							<a href="cute-farms-terrarium-starter-kit.html">
+								<img src="images/cute-farms-terrarium-starter-kit.png" alt="Cute Farms Terrarium Starter Kit" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
-									<p>$19.95</p>
+									<p>$24.95</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2T7EQlc" target="_blank">
-								<img src="images/terrarium-essentials-kit.png" alt="Essentials" class="product-img">
+							<a href="terrarium-essentials-kit.html">
+								<img src="images/terrarium-essentials-kit.png" alt="Terrarium Essentials Kit" class="product-img">
 								<div class="product-description">
-									<p>Terrarium Essentials Kit </p>
-									<p>$21.99</p>
+									<p>Terrarium Essentials Kit</p>
+									<p>$25.00</p>
 								</div>
 							</a>
 						</td>
