--- a/store.html
+++ b/store.html
@@ -75,7 +75,7 @@
 								<img src="images/light-up-terrarium-kit.jpg" alt="Light-up Terrarium Kit" class="product-img">
 								<div class="product-description">
 									<p>Light-up Terrarium Kit</p>
-									<p>$24.99</p>
+									<p>$29.99</p>
 								</div>
 							</a>
 						</td>
@@ -85,13 +85,13 @@
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>$20.95</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
 							<a href="adult-venus-flytrap-in-blue-terrarium.html">
-								<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt="Adult Venus Flytrap in 4.5" Blue Terrarium" class="product-img">
+								<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt='Adult Venus Flytrap in 4.5" Blue Terrarium' class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Adult Venus Flytrap in 4.5" Blue Terrarium</p>
@@ -107,7 +107,7 @@
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
-									<p>$40.99</p>
+									<p>$33.97</p>
 								</div>
 							</a>
 						</td>
@@ -116,7 +116,7 @@
 								<img src="images/cute-farms-terrarium-starter-kit.png" alt="Cute Farms Terrarium Starter Kit" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
-									<p>$22.95</p>
+									<p>$24.95</p>
 								</div>
 							</a>
 						</td>
@@ -125,7 +125,7 @@
 								<img src="images/mkono-plant-terrarium-display-glass.png" alt="Mkono Plant Terrarium Display Glass" class="product-img">
 								<div class="product-description">
 									<p>Mkono Plant Terrarium Display Glass</p>
-									<p>$12.59</p>
+									<p>$15.69</p>
 								</div>
 							</a>
 						</td>
