--- a/terrarium-essentials-kit.html
+++ b/terrarium-essentials-kit.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/terrarium-essentials-kit.png" alt="Terrarium Essentials Kit sold by JM Bamboo" class="product-pg-img">
+				<img src="images/terrarium-essentials-kit.png" alt="Terrarium Essentials Kit" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Terrarium Essentials Kit sold by JM Bamboo</h2>
 					<h2 style="float: left">$25.00</h2>
