--- a/terrariums.html
+++ b/terrariums.html
@@ -71,41 +71,41 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PhajAn" target="_blank">
-								<img src="images/light-up-terrarium-kit.jpg" alt="kids" class="product-img">
+							<a href="light-up-terrarium-kit.html">
+								<img src="images/light-up-terrarium-kit.jpg" alt="Light-up Terrarium Kit for Kids" class="product-img">
 								<div class="product-description">
 									<p>Light-up Terrarium Kit for Kids</p>
-									<p>$24.99</p>
+									<p>$29.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/3bYhVRU" target="_blank">
-								<img src="images/kook-geometric-glass-terrarium.png" alt="kook" class="product-img">
+							<a href="kook-geometric-glass-terrarium.html">
+								<img src="images/kook-geometric-glass-terrarium.png" alt="KooK Geometric Glass Terrarium" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>$20.95</p>
 								</div>
 							</a>
 						</td><td class="product">
-							<a href="https://amzn.to/3bW8Glj" target="_blank">
-								<img src="images/exo-terra-nano-wide-terrarium.png" alt="exo" class="product-img">
+							<a href="exo-terra-nano-wide-terrarium.html">
+								<img src="images/exo-terra-nano-wide-terrarium.png" alt="EXO-TERRA Nano Wide Terrarium" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
-									<p>$29.39</p>
+									<p>$33.97</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2umQEYj" target="_blank">
-								<img src="images/mkono-plant-terrarium-display-glass.png" alt="mkono2" class="product-img">
+							<a href="mkono-plant-terrarium-display-glass.html">
+								<img src="images/mkono-plant-terrarium-display-glass.png" alt="Mkono Plant Terrarium Display Glass" class="product-img">
 								<div class="product-description">
-									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
-									<p>$11.99</p>
+									<p>Mkono Plant Terrarium Display Glass</p>
+									<p>$15.69</p>
 								</div>
 							</a>
 						</td>
