--- a/plants.html
+++ b/plants.html
@@ -61,11 +61,11 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/38OsmWd" target="_blank">
-								<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt="venus" class="product-img">
+							<a href="adult-venus-flytrap-in-blue-terrarium.html">
+								<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt='Adult Venus Flytrap in 4.5" Blue Terrarium' class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Nature Gift Store Adult Venus Flytrap </p>
+									<p>Adult Venus Flytrap in 4.5" Blue Terrarium</p>
 									<p>$12.85</p>
 								</div>
 							</a>
