Intregrated Media.net Ads

--- a/critter-care.html
+++ b/critter-care.html
@@ -16,6 +16,13 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-154593775-1');
 		</script>
+		<!-- Media.net Ads -->
+		<script type="text/javascript">
+			window._mNHandle = window._mNHandle || {};
+			window._mNHandle.queue = window._mNHandle.queue || [];
+			medianet_versionId = "3121199";
+		</script>
+		<script src="https://contextual.media.net/dmedianet.js?cid=8CUEV7332" async="async"></script>
 	</head>
 	<body>
 		<div class="navbar">
@@ -59,6 +66,16 @@
 		<article>
             <div class="content">
 				<br/><br/>
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
 				<h1><i>Crested Geckos</i></h1>
 
 				<h2><u><b>Housing</b></u></h2>
@@ -91,7 +108,18 @@
 				<h2><u><b>Food</b></u></h2>
 				<p>A shallow dish of water should be given at all times for your leopard gecko. You should feed a variety of crickets, waxworms, mealworms. Insects need to be gut loaded for at least 24 hours before feeding and then covered with a calcium supplement at each feeding. Younger geckos should be fed a few crickets every day, older geckos can skip several days between meals.</p>
 
-				<br/><br/>
+				<br/>
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
+				<br/>
 				<h1><i>Isopods</i></h1>
 
 				<h2><u><b>Housing</b></u></h2>
@@ -113,6 +141,16 @@
 				<p>Drop in a few grains of rice into your culture. Rice will mold over and will provide a reliable food source. Exchange the old rice with new grains if they have lost interest in the older rice.</p>
 
 				<br/>
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
 				<h1><i>Adding Critters To Your Setup</i></h1>
 
 				<h2><u><b>Basic Information</b></u></h2>
