--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-154593775-1');
 		</script>
+		<!-- Media.net Ads -->
+		<script type="text/javascript">
+			window._mNHandle = window._mNHandle || {};
+			window._mNHandle.queue = window._mNHandle.queue || [];
+			medianet_versionId = "3121199";
+		</script>
+		<script src="https://contextual.media.net/dmedianet.js?cid=8CUEV7332" async="async"></script>
 	</head>
 	<body>
 		<div class="navbar">
@@ -69,6 +76,16 @@
 		</div>
 		<article id="article">
 			<div class="content">
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
 				<h1 style="text-align: center">Featured Products</h1>
 				<table>
 					<tr>
