--- a/plant-care.html
+++ b/plant-care.html
@@ -16,6 +16,13 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-154593775-1');
 		</script>
+		<!-- Media.net Ads -->
+		<script type="text/javascript">
+			window._mNHandle = window._mNHandle || {};
+			window._mNHandle.queue = window._mNHandle.queue || [];
+			medianet_versionId = "3121199";
+		</script>
+		<script src="https://contextual.media.net/dmedianet.js?cid=8CUEV7332" async="async"></script>
 	</head>
 	<body>
 		<div class="navbar">
@@ -59,6 +66,16 @@
 		<article>
             <div class="content">
 				<br/><br/>
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
 				<h1><i>Carnivorous Plants </i></h1>
 
 				<h2><u><b> Watering </b></u></h2>
@@ -92,6 +109,16 @@
 
 				<h2><u><b> Light </b></u></h2>
 				<p>Succulents like lots of indirect light. Never put in direct sunlight or outdoors. They do well on a window that gets indirect light all day. Too much direct sunlight will cook the plants.</p>
+				<div id="759747374">
+					<script type="text/javascript">
+						try {
+							window._mNHandle.queue.push(function (){
+								window._mNDetails.loadTag("759747374", "728x90", "759747374");
+							});
+						}
+						catch (error) {}
+					</script>
+				</div>
             </div>
         </article>
 		<footer>
