--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0;url=https://rainierterrariums.com/home.php" />
+		<meta http-equiv="refresh" content="0;url=https://rainierterrariums.com/home" />
 		<!--<meta http-equiv="refresh" content="0;url=file:///C:/Users/sn346567/Documents/GitHub/Rainier/home.php" />-->
 		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
 		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
