--- a/critters.html
+++ b/critters.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html>
+<!doctype php>
+<php>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Critters - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -58,69 +56,76 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
+		<article>
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2HQQQlW" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
+							<a href="https://amzn.to/32kKIvu" target="_blank">
+								<img src="images/product18.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<img src="images/verified.png" alt="Quality Verified" class="verified">
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2wBpeyB" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$19.99 </p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32jcngm" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
+							<a href="https://amzn.to/37Tfay2" target="_blank">
+								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
-									<p>$14.99</p>
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$22.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/39SjsHg" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+							<a href="https://amzn.to/2HLjJ2V" target="_blank">
+								<img src="images/product40.jpg" alt="mus" class="product-img">
 								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$17.95</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/38UEJ39" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
-								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99 </p>
+									<br/>
+									<p>Josh's Frogs Temperate Springtail Culture </p>
+									<p>$19.99</p>
 								</div>
 							</a>
 						</td>
 					</tr>
+					<tr>
+					<td class="product">
+						<a href="https://amzn.to/2wzfyoi" target="_blank">
+							<img src="images/product42.jpg" alt="mushr" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> Live Orange Smoothie Roly Polys! Rolie Polie Isopods</p>
+								<p>$9.99</p>
+							</div>
+						</a>
+					</td>
+					<td class="product">
+						<a href="https://amzn.to/2vV9c2v" target="_blank">
+							<img src="images/product43.jpg" alt="mushro" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> Powder Orange Isopods Cleanup Crew</p>
+								<p>$26.99</p>
+							</div>
+						</a>
+					</td>
+				</tr>
 				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
@@ -138,4 +143,4 @@
 		</footer>
 		<script src="script.js"></script>
 	</body>
-</html>
+</php>
