--- a/terrariums.html
+++ b/terrariums.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Terrariums - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -58,22 +56,31 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
+		<article>
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2HQQQlW" target="_blank">
+							<a href="https://amzn.to/2VmSNhE" target="_blank">
+								<img src="images/product2.jpg" alt="Mkono" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Mkono 3 Packs Mini Glass Geometric Terrarium</p>
+									<p>$23.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2PhajAn" target="_blank">
+								<img src="images/Product1.jpg" alt="kids" class="product-img">
+								<div class="product-description">
+									<p>Light-up Terrarium Kit for Kids</p>
+									<p>$24.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/3bYhVRU" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -81,46 +88,59 @@
 									<p>$21.95</p>
 								</div>
 							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/32jcngm" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
+						</td><td class="product">
+							<a href="https://amzn.to/3bW8Glj" target="_blank">
+								<img src="images/Product5.png" alt="exo" class="product-img">
 								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
-									<p>$14.99</p>
+									<br/>
+									<p>EXO-TERRA Nano Wide Terrarium</p>
+									<p>$29.39</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2umQEYj" target="_blank">
+								<img src="images/product7.png" alt="mkono2" class="product-img">
+								<div class="product-description">
+									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
+									<p>$11.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/39SjsHg" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+							<a href="https://amzn.to/2PjJk71" target="_blank">
+								<img src="images/product10.png" alt="h" class="product-img">
 								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$17.95</p>
+									<p>H Potter Glass Terrarium </p>
+									<p>$189.50</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/38UEJ39" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
+							<a href="https://amzn.to/2wEmv7D" target="_blank">
+								<img src="images/product25.jpg" alt="slant" class="product-img">
 								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99 </p>
+									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
+									<p>$24.99 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2vYr1h7" target="_blank">
+								<img src="images/Product54.jpg" alt="hideg" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Exo Terra AllGlass Terrarium - 18 x 18 x 24  </p>
+									<p> $169.65 </p>
 								</div>
 							</a>
 						</td>
 					</tr>
 				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
