--- a/critters.html
+++ b/critters.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html>
+<!doctype php>
+<php>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-        <meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Critters - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -58,69 +56,75 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
+		<article>
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
-					<td class="product">
-							<a href="https://amzn.to/2HUHx49" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
+						<td class="product">
+							<a href="https://amzn.to/37PDZL5" target="_blank">
+								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
-									<br/>
-									<p>KooK Geometric Glass Terrarium</p>
-									<p>$22.95</p>
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2VfXNVj" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
+							<a href="https://amzn.to/38ZzoYs" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
+									<br/>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$27.49</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/32pmUGP" target="_blank">
+								<img src="images/product27.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$24.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/37PFBED" target="_blank">
+								<img src="images/product40.jpg" alt="mus" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Josh's Frogs Temperate Springtail Culture</p>
+									<p>$19.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+					<td class="product">
+							<a href="https://amzn.to/2Ta9dY1" target="_blank">
+								<img src="images/product42.jpg" alt="mushr" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Live Orange Smoothie Roly Polys! Rolie Polie Isopods</p>
 									<p>$14.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PiN5Ke" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+							<a href="https://amzn.to/37TbWuq" target="_blank">
+								<img src="images/product43.jpg" alt="mushro" class="product-img">
 								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$20.02</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/2v0qECE" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
-								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99</p>
+									<br/>
+									<p>Powder Orange Isopods Cleanup Crew</p>
+									<p>$30.00</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
@@ -133,9 +137,9 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.php">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
 	</body>
-</html>
+</php>
