--- a/plants.html
+++ b/plants.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-        <meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Plants - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -20,7 +18,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="navbar">
+	<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
 
@@ -58,27 +56,17 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
+		<article>
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
 					<td class="product">
-							<a href="https://amzn.to/2HUHx49" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
+							<a href="https://amzn.to/2STdtfR" target="_blank">
+								<img src="images/product4.jpg" alt="venus" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>KooK Geometric Glass Terrarium</p>
-									<p>$22.95</p>
+									<p>Nature Gift Store Adult Venus Flytrap </p>
+									<p>$12.85</p>
 								</div>
 							</a>
 						</td>
@@ -101,26 +89,58 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2v0qECE" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
+							<a href="https://amzn.to/37OGZHT" target="_blank">
+								<img src="images/product15.png" alt="3" class="product-img">
 								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99</p>
+									<p>3 Small Sized B52 Giant Venus Flytraps</p>
+									<p>$19.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+					<td class="product">
+							<a href="https://amzn.to/2PgDxiw" target="_blank">
+								<img src="images/product17.png" alt="sundew" class="product-img">
+								<div class="product-description">
+									<p>Cape Sundew - Drosera capensis</p>
+									<p>$19.99 (Currently Unavailable)</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/37LXHHO" target="_blank">
+								<img src="images/product20.png" alt="fig" class="product-img">
+								<div class="product-description">
+									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
+									<p>$5.99 (Currently Unavailable)</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/32jmqlL" target="_blank">
+								<img src="images/product38.jpg" alt="m" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Mycelium Spawn Dried Spores Kit</p>
+									<p>$14.99 (Currently Unavailable)</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/3c4HrVs" target="_blank">
+								<img src="images/product39.jpg" alt="mu" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Forest Organics Glow in the Dark Mushroom Growing Kit</p>
+									<p>$16.95 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
@@ -133,7 +153,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.php">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
