--- a/template.html
+++ b/template.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-        <meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -58,69 +56,13 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
-				<table>
-					<tr>
-					<td class="product">
-							<a href="https://amzn.to/2HUHx49" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
-								<div class="product-description">
-									<br/>
-									<p>KooK Geometric Glass Terrarium</p>
-									<p>$22.95</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/2VfXNVj" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
-								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
-									<p>$14.99</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/2PiN5Ke" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
-								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$20.02</p>
-								</div>
-							</a>
-						</td>
-						<td class="product">
-							<a href="https://amzn.to/2v0qECE" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
-								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99</p>
-								</div>
-							</a>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+		<!--for page previewing with no content-->
+		<article style="height: 100vh">
+		<!--<article>-->
+            <div class="content">
+
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
@@ -133,7 +75,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.php">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
