--- a/terrariums.html
+++ b/terrariums.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
-		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-        <meta description="The place to be for plants, terrariums, critter enclosures and more...">
+		<title>Terrariums - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -58,21 +56,30 @@
 			<li><a href="plants">Plants</a></li>
 			<li><a href="critters">Critters</a></li>
 		</ul>
-		<div class="title-section">
-			<div class="title-box">
-				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
-				<h1 class="subtitle">The place to be for plants, terrariums, and little critters</h1>
-			</div>
-			<div class="scroll-indicator">
-				<a href="#article"><img src="images/down-arrow.png" alt="Scroll Down" class="down-arrow"></a>
-			</div>
-		</div>
-		<article id="article">
-			<div class="content">
-				<h1 style="text-align: center">Featured Products</h1>
+		<article>
+            <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
 					<td class="product">
+							<a href="https://amzn.to/2uomJit" target="_blank">
+								<img src="images/product2.jpg" alt="Mkono" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Mkono Mini Glass Geometric Terrarium Container Set of 3</p>
+									<p>$24.98</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/37XXp0J" target="_blank">
+								<img src="images/Product1.jpg" alt="kids" class="product-img">
+								<div class="product-description">
+									<p>Light-up Terrarium Kit</p>
+									<p>$24.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
 							<a href="https://amzn.to/2HUHx49" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
@@ -83,44 +90,58 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2VfXNVj" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
+							<a href="https://amzn.to/2rzSaVT" target="_blank">
+								<img src="images/Product5.png" alt="exo" class="product-img">
 								<div class="product-description">
-									<p>Mini Ferns for Terrariums/Fairy Garden </p>
-									<p>$14.99</p>
+									<br/>
+									<p>EXO-TERRA Nano Wide Terrarium</p>
+									<p>$59.62</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+					<td class="product">
+							<a href="https://amzn.to/3bUSv7E" target="_blank">
+								<img src="images/product7.png" alt="mkono2" class="product-img">
+								<div class="product-description">
+									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
+									<p>$14.88</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PiN5Ke" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+							<a href="https://amzn.to/2HNiJem" target="_blank">
+								<img src="images/product10.png" alt="h" class="product-img">
 								<div class="product-description">
-									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$20.02</p>
+									<p>H Potter Glass Terrarium </p>
+									<p>$189.50 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2v0qECE" target="_blank">
-								<img src="images/product24.jpg" alt="led" class="product-img">
+							<a href="https://amzn.to/32ihCgq" target="_blank">
+								<img src="images/product25.jpg" alt="slant" class="product-img">
 								<div class="product-description">
-									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99</p>
+									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
+									<p>$24.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2Pf2aME" target="_blank">
+								<img src="images/Product54.jpg" alt="hideg" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Exo Terra AllGlass Terrarium - 18 x 18 x 24</p>
+									<p>$169.99</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 				</table>
-			</div>
-		</article>
-		<!--section in developement
-		<div class="background-section" style="background-image: url(images/index-background.png);">
-			<div class="background-section-content">
-				<h1>What Are We?</h1>
-				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
-			</div>
-		</div>
-		-->
+            </div>
+        </article>
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
@@ -133,7 +154,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.php">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
