--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="navbar">
+	<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
 
@@ -67,10 +67,10 @@
 				</form>
 			</div>
 		</article>
-		<footer style="width: 100%; position: absolute; bottom: 0;">
+		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -79,7 +79,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
