--- a/critter-care.html
+++ b/critter-care.html
@@ -18,7 +18,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="navbar">
+	<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
 
@@ -122,7 +122,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/32kKIvu" target="_blank">
+							<a href="https://amzn.to/37PDZL5" target="_blank">
 								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
@@ -131,22 +131,22 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2wBpeyB" target="_blank">
+							<a href="https://amzn.to/38ZzoYs" target="_blank">
 								<img src="images/product26.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Premium Live Springtails 16oz Mini Culture</p>
-									<p>$19.99 </p>
+									<p>$27.49</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/37Tfay2" target="_blank">
+							<a href="https://amzn.to/32pmUGP" target="_blank">
 								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Pocket Pets Fast Producing Roly Polys</p>
-									<p>$22.99</p>
+									<p>$24.99</p>
 								</div>
 							</a>
 						</td>
@@ -157,7 +157,7 @@
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -166,7 +166,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
