--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
 		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
-		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
+        <meta description="The place to be for plants, terrariums, critter enclosures and more...">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -72,18 +72,18 @@
 				<h1 style="text-align: center">Featured Products</h1>
 				<table>
 					<tr>
-						<td class="product">
-							<a href="https://amzn.to/2HQQQlW" target="_blank">
+					<td class="product">
+							<a href="https://amzn.to/2HUHx49" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>$22.95</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32jcngm" target="_blank">
+							<a href="https://amzn.to/2VfXNVj" target="_blank">
 								<img src="images/product9.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
@@ -92,20 +92,20 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/39SjsHg" target="_blank">
+							<a href="https://amzn.to/2PiN5Ke" target="_blank">
 								<img src="images/product12.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$17.95</p>
+									<p>$20.02</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/38UEJ39" target="_blank">
+							<a href="https://amzn.to/2v0qECE" target="_blank">
 								<img src="images/product24.jpg" alt="led" class="product-img">
 								<div class="product-description">
 									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
-									<p>$31.99 </p>
+									<p>$31.99</p>
 								</div>
 							</a>
 						</td>
@@ -124,7 +124,7 @@
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -133,7 +133,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact.php">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
