--- a/materials.html
+++ b/materials.html
@@ -61,54 +61,54 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2vUiA6l" target="_blank">
+							<a href="https://amzn.to/2SQ38kK" target="_blank">
 								<img src="images/product6.png" alt="cute" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
-									<p>$19.95</p>
+									<p>$24.95</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2T7EQlc" target="_blank">
+							<a href="https://amzn.to/2wJuArX" target="_blank">
 								<img src="images/product8.png" alt="Essentials" class="product-img">
 								<div class="product-description">
 									<p>Terrarium Essentials Kit </p>
-									<p>$21.99</p>
+									<p>$25.00</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2HRqEro" target="_blank">
+							<a href="https://amzn.to/2HNqOQp" target="_blank">
 								<img src="images/product11.jpg" alt="H potter" class="product-img">
 								<div class="product-description">
 									<p>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus</p>
-									<p>$16.95</p>
+									<p>$16.95 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PfM7xZ" target="_blank">
-								<img src="images/product14.jpg" alt="moss" class="product-img">
+							<a href="https://amzn.to/32lkc54" target="_blank">
+								<img src="images/product13.jpg" alt="moss" class="product-img">
 								<div class="product-description">
 									<p>Galápagos (05213) Terrarium Sphagnum Moss</p>
-									<p>$5.09 </p>
+									<p>$6.99</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/37WJYhb" target="_blank">
+							<a href="https://amzn.to/2uonOqx" target="_blank">
 								<img src="images/product16.png" alt="soil" class="product-img">
 								<div class="product-description">
 									<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
-									<p>$8.95</p>
+									<p>$12.50</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2w1QDd2" target="_blank">
+							<a href="https://amzn.to/32icVTR" target="_blank">
 								<img src="images/product19.png" alt="rock" class="product-img">
 								<div class="product-description">
 									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
@@ -117,27 +117,27 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32kJsIM" target="_blank">
+							<a href="https://amzn.to/2SQJ0Pm" target="_blank">
 								<img src="images/product21.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
-									<p> $4.19 </p>
+									<p>$10.65</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2HPUcW8" target="_blank">
+							<a href="https://amzn.to/2v9d5Rd" target="_blank">
 								<img src="images/product22.png" alt="char" class="product-img">
 								<div class="product-description">
 									<p>Horticultural Charcoal, 100% All Natural Hardwood</p>
-									<p> $10.49 </p>
+									<p>$9.99</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/3c4wseI" target="_blank">
+							<a href="https://amzn.to/2uoodcx" target="_blank">
 								<img src="images/product23.png" alt="co" class="product-img">
 								<div class="product-description">
 									<p>Exo Terra Coco Husk Terrarium Substrate</p>
@@ -146,32 +146,54 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2SQ5yzR" target="_blank">
+							<a href="https://amzn.to/2TdnnYq" target="_blank">
 								<img src="images/product28.jpg" alt="sub" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p> Isopod Substrate ISO Mix Bioactive Substrate Bedding</p>
+									<p>Isopod Substrate ISO Mix Bioactive Substrate Bedding</p>
 									<p>$11.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32mUzAQ" target="_blank">
-								<img src="images/product41.jpg" alt="mush" class="product-img">
+							<a href="https://amzn.to/2SSURwh" target="_blank">
+								<img src="images/product35.jpg" alt="ro" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Josh's Frogs Horticultural Charcoal (1 Quart)</p>
-									<p>$10.98</p>
+									<p>Natural Slate Stone - Less than 1/8 inch</p>
+									<p>$8.95</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32pim3s" target="_blank">
-								<img src="images/Product60.jpg" alt="wat" class="product-img">
+							<a href="https://amzn.to/2HLbMuq" target="_blank">
+								<img src="images/product36.jpg" alt="roc" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p> Zilla Reptile Décor Malaysian Driftwood</p>
-									<p>$8.14 </p>
+									<p>Josh's Frogs BioBedding Tropical Bioactive Substrate</p>
+									<p>$29.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2vV5sht" target="_blank">
+								<img src="images/product37.jpg" alt="s" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>EXO-TERRA Plantation Soil Terrarium Substrate</p>
+									<p>$3.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2SUGV53" target="_blank">
+								<img src="images/product41.jpg" alt="mush" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Josh's Frogs Horticultural Charcoal (1 Quart)</p>
+									<p>$10.99</p>
 								</div>
 							</a>
 						</td>
@@ -182,7 +204,7 @@
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -191,7 +213,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
