--- a/plants.html
+++ b/plants.html
@@ -18,7 +18,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="navbar">
+	<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
 
@@ -60,8 +60,8 @@
             <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
-						<td class="product">
-							<a href="https://amzn.to/38OsmWd" target="_blank">
+					<td class="product">
+							<a href="https://amzn.to/2STdtfR" target="_blank">
 								<img src="images/product4.jpg" alt="venus" class="product-img">
 								<div class="product-description">
 									<br/>
@@ -71,7 +71,7 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/38Osl4B" target="_blank">
+							<a href="https://amzn.to/2VfXNVj" target="_blank">
 								<img src="images/product9.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
@@ -80,60 +80,60 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2Pirn8R" target="_blank">
+							<a href="https://amzn.to/2PiN5Ke" target="_blank">
 								<img src="images/product12.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
-									<p>$17.95</p>
+									<p>$20.02</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/3c4QVA7" target="_blank">
+							<a href="https://amzn.to/37OGZHT" target="_blank">
 								<img src="images/product15.png" alt="3" class="product-img">
 								<div class="product-description">
 									<p>3 Small Sized B52 Giant Venus Flytraps</p>
-									<p>$21.39</p>
+									<p>$19.99</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
-						<td class="product">
-							<a href="https://amzn.to/2ST2mna" target="_blank">
+					<td class="product">
+							<a href="https://amzn.to/2PgDxiw" target="_blank">
 								<img src="images/product17.png" alt="sundew" class="product-img">
 								<div class="product-description">
 									<p>Cape Sundew - Drosera capensis</p>
-									<p>$19.99</p>
+									<p>$19.99 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/32j4vve" target="_blank">
+							<a href="https://amzn.to/37LXHHO" target="_blank">
 								<img src="images/product20.png" alt="fig" class="product-img">
 								<div class="product-description">
 									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
-									<p>$5.99</p>
+									<p>$5.99 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/3c12JDr" target="_blank">
+							<a href="https://amzn.to/32jmqlL" target="_blank">
 								<img src="images/product38.jpg" alt="m" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Mycelium Spawn Dried Spores Kit</p>
-									<p>$14.99</p>
+									<p>$14.99 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/3cbPDnc" target="_blank">
+							<a href="https://amzn.to/3c4HrVs" target="_blank">
 								<img src="images/product39.jpg" alt="mu" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Forest Organics Glow in the Dark Mushroom Growing Kit</p>
-									<p>$16.95</p>
+									<p>$16.95 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
@@ -144,7 +144,7 @@
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -153,7 +153,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
