--- a/terrariums.html
+++ b/terrariums.html
@@ -60,80 +60,81 @@
             <div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
-						<td class="product">
-							<a href="https://amzn.to/2VmSNhE" target="_blank">
+					<td class="product">
+							<a href="https://amzn.to/2uomJit" target="_blank">
 								<img src="images/product2.jpg" alt="Mkono" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Mkono 3 Packs Mini Glass Geometric Terrarium</p>
-									<p>$23.99</p>
+									<p>Mkono Mini Glass Geometric Terrarium Container Set of 3</p>
+									<p>$24.98</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PhajAn" target="_blank">
+							<a href="https://amzn.to/37XXp0J" target="_blank">
 								<img src="images/Product1.jpg" alt="kids" class="product-img">
 								<div class="product-description">
-									<p>Light-up Terrarium Kit for Kids</p>
+									<p>Light-up Terrarium Kit</p>
 									<p>$24.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/3bYhVRU" target="_blank">
+							<a href="https://amzn.to/2HUHx49" target="_blank">
 								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
-									<p>$21.95</p>
+									<p>$22.95</p>
 								</div>
 							</a>
-						</td><td class="product">
-							<a href="https://amzn.to/3bW8Glj" target="_blank">
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2rzSaVT" target="_blank">
 								<img src="images/Product5.png" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
-									<p>$29.39</p>
+									<p>$59.62</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
-						<td class="product">
-							<a href="https://amzn.to/2umQEYj" target="_blank">
+					<td class="product">
+							<a href="https://amzn.to/3bUSv7E" target="_blank">
 								<img src="images/product7.png" alt="mkono2" class="product-img">
 								<div class="product-description">
 									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
-									<p>$11.99</p>
+									<p>$14.88</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2PjJk71" target="_blank">
+							<a href="https://amzn.to/2HNiJem" target="_blank">
 								<img src="images/product10.png" alt="h" class="product-img">
 								<div class="product-description">
 									<p>H Potter Glass Terrarium </p>
-									<p>$189.50</p>
+									<p>$189.50 (Currently Unavailable)</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2wEmv7D" target="_blank">
+							<a href="https://amzn.to/32ihCgq" target="_blank">
 								<img src="images/product25.jpg" alt="slant" class="product-img">
 								<div class="product-description">
 									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
-									<p>$24.99 </p>
+									<p>$24.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2vYr1h7" target="_blank">
+							<a href="https://amzn.to/2Pf2aME" target="_blank">
 								<img src="images/Product54.jpg" alt="hideg" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p> Exo Terra AllGlass Terrarium - 18 x 18 x 24  </p>
-									<p> $169.65 </p>
+									<p>Exo Terra AllGlass Terrarium - 18 x 18 x 24</p>
+									<p>$169.99</p>
 								</div>
 							</a>
 						</td>
@@ -144,7 +145,7 @@
 		<footer>
 			<div class="copyright">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-				<h3>Copyright &copy; 2020 Kelson Milewski</h3>
+				<h3>Copyright &copy; 2020 Rainier Terraiums</h3>
 			</div>
 			<div class="footer-social-section">
 				<a href="https://discord.gg/eybXTrr" target="_blank"><img src="images/discord-logo.png" alt="Discord" class="footer-social"></a>
@@ -153,7 +154,7 @@
 				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/facebook-logo.png" target="_blank" alt="Facebook" class="footer-social"></a>
 			</div>
 			<div class="footer-links">
-				<a href="contact.html">Contact Us</a>
+				<a href="contact">Contact Us</a>
 			</div>
 		</footer>
 		<script src="script.js"></script>
